UC : WIP : code optimization

--- a/tweet-app-SSR/static/views/tweet-list.ejs
+++ b/tweet-app-SSR/static/views/tweet-list.ejs
@@ -4,7 +4,7 @@
 
     <%if (error) { %>
         <div class="alert alert-warning" role="alert">
-            <h3>Error: <%= msg %> </h3>
+            <h3> <%= msg %> </h3>
         </div>
     <% } %>
 
