--- a/tweet-app-SSR/static/views/index.ejs
+++ b/tweet-app-SSR/static/views/index.ejs
@@ -1,15 +1,20 @@
 <%- include('page-start') %>
 
-<div class="home-container container">
-    <h1 class="my-4 text-center">Welcome to my Tweet App</h1>
-    <!-- <img class="img-fluid" src="images/twit-banner.jpg"/> -->
+    <div class="home-container container">
+        <h1 class="my-4 text-center">Welcome to my Tweet App</h1>
+        <!-- <img class="img-fluid" src="images/twit-banner.jpg"/> -->
 
-    <div class="input-group input-group-lg mb-3">
-        <input id="search-input" type="text" class="form-control" placeholder="What would you like to look for?" aria-label="Search" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-            <button id="search-btn" class="btn btn-outline-secondary" type="button">Search</button>
-        </div>
+
+        <form id="searchForm">
+            <div class="input-group input-group-lg mb-3">
+                <input id="search-input" type="text" class="form-control" placeholder="What would you like to look for?" aria-label="Search"
+                    aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button id="search-btn" class="btn btn-outline-secondary" type="submit">Search</button>
+                </div>
+            </div>
+        </form>
+
     </div>
-</div>
 
-<%- include('page-end') %>
+    <%- include('page-end') %>
