--- a/tweet-app-SSR/static/views/page-end.ejs
+++ b/tweet-app-SSR/static/views/page-end.ejs
@@ -1,3 +1,6 @@
+<%# <nav class="navbar fixed-bottom navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Fixed bottom</a>
+</nav> %>
 
 <script src="script.js"></script>
 
