--- a/tweet-app-SSR/static/views/page-start.ejs
+++ b/tweet-app-SSR/static/views/page-start.ejs
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:image" content="icons/icon-512.png">
 	<link rel="shortcut icon" href="favicon.ico">
-	<!-- <link rel="manifest" href="tweetapp.webmanifest"> -->
+	<link rel="manifest" href="node-tweet-app.webmanifest">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
