UC :   WIP  :  updated HTML theme color

--- a/tweet-app-SSR/static/views/page-start.ejs
+++ b/tweet-app-SSR/static/views/page-start.ejs
@@ -6,7 +6,7 @@
   <meta name="description" content="This is a sample Tweet App">
   <meta name="author" content="UPENDRA">
 
-	<meta name="theme-color" content="#B12A34">
+	<meta name="theme-color" content="#0398fc">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:image" content="icons/icon-512.png">
 	<link rel="shortcut icon" href="favicon.ico">
